# cadical

./: .gitignore  CMakeLists.txt  CaDiCaLConfig.cmake.in  cadical.pc.in  cadicalConfig.cmake.in
src/: CMakeLists.txt  lratbuilder.hpp  lratchecker.hpp
test/api/: CMakeLists.txt  eager_int_vars.cpp  example.cpp  lazy_int_vars.cpp
